--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -289,6 +289,7 @@ tbody tr:hover:not(.MuiTableRow-footer) {
   line-height: 24px;
   text-align: center;
   text-transform: none;
+  white-space: nowrap;
 }
 .input-field {
   width: 100%;
