--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -208,6 +208,10 @@
 
 .case-discovery-detailed {
     height: 100%;
+    .MuiButton-root.Mui-disabled {
+        color: #ffffff;
+        opacity: 0.3;
+    }
     .detailed-case {
         position: relative;
         padding: 40px;
@@ -236,6 +240,7 @@
                 margin: auto 0;
             }
         }
+        
         .case-title {
             font-family: "Noto Sans";
             font-weight: bold;
@@ -247,9 +252,10 @@
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
-            -webkit-line-clamp: 2; /* number of lines to show */
+            -webkit-line-clamp: 1; /* number of lines to show */
             -webkit-box-orient: vertical;
         }
+        
         .case-description {
             font-family: "Noto Sans";
             font-weight: bold;
@@ -327,7 +333,7 @@
                 margin: 30px 0 12px;
             }
             .timing {
-                min-width: 320px;
+                min-width: 480px;
                 max-width: 600px;
                 .scheduled-start {
                     margin-bottom: 16px;
@@ -341,6 +347,7 @@
                     mix-blend-mode: normal;
                     opacity: 0.8;
                     margin: 8px 0;
+                    white-space: nowrap;
                 }
                 .timing-value {
                     font-weight: bold;
@@ -493,9 +500,8 @@
                     -webkit-line-clamp: 3; /* number of lines to show */
                     -webkit-box-orient: vertical;
                 }
-                .case-time {
-                    // bottom: 12px;
-                    // position: absolute;
+                &.short .case-title {
+                    -webkit-line-clamp: 1;
                 }
                 &.is-current-case {
                     background: #d8f0f9;
@@ -539,8 +545,9 @@
         display: flex;
         flex-direction: column;
     }
+    
     right: 0;
-    max-width: 570px;
+    width: 580px;
     height: 100%;
     overflow-y: auto;
     padding: 40px;
