--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1,7 +1,6 @@
 @import "../../styles/global-styles.scss";
+.tag-info-modal,
 .app-wrapper section.case-discovery {
-    overflow: hidden;
-    padding: 0px;
     .tags {
         margin: 4px -4px;
         display: flex;
@@ -27,6 +26,10 @@
             color: #7b2d2d;
         }
     }
+}
+.app-wrapper section.case-discovery {
+    overflow: hidden;
+    padding: 0px;
 }
 
 .case-discovery-search {
@@ -83,6 +86,9 @@
         max-height: calc(100vh - 17px);
         margin-top: 20px;
         max-width: 360px;
+        .link {
+            font-size: 16px;
+        }
         .select-header {
             display: flex;
             justify-content: space-between;
@@ -219,7 +225,7 @@
         overflow-y: auto;
         max-width: calc(100vw - 340px);
         max-height: calc(100vh);
-        .detailed-loading{
+        .detailed-loading {
             width: 100%;
             position: absolute;
         }
@@ -240,7 +246,7 @@
                 margin: auto 0;
             }
         }
-        
+
         .case-title {
             font-family: "Noto Sans";
             font-weight: bold;
@@ -255,7 +261,7 @@
             -webkit-line-clamp: 1; /* number of lines to show */
             -webkit-box-orient: vertical;
         }
-        
+
         .case-description {
             font-family: "Noto Sans";
             font-weight: bold;
@@ -388,6 +394,7 @@
                 }
                 .marker {
                     font-family: "Noto Sans";
+                    font-weight: bold;
                     font-size: 12px;
                     line-height: 19px;
                     line,
@@ -398,6 +405,7 @@
                 }
                 .toggles {
                     margin-bottom: 18px;
+                    margin-left: -4px;
                     .toggle {
                         padding: 8px;
                         font-style: normal;
@@ -408,13 +416,11 @@
                         box-sizing: border-box;
                         border-radius: 4px;
                         color: #2f83a4;
-
+                        display: inline-flex;
                         mix-blend-mode: normal;
-                        margin: 0px 4px;
+                        margin: 4px 4px;
                         cursor: pointer;
-                        &:first-child {
-                            margin-left: 0;
-                        }
+
                         &.selected {
                             background: #d8f0f9;
                             color: #004f6e;
@@ -430,7 +436,7 @@
     }
 
     .schedule {
-        background: rgba(216, 223, 249,.4);
+        background: rgba(216, 223, 249, 0.4);
 
         box-shadow: -1px 0px 0px rgba(0, 0, 0, 0.1);
         width: 100%;
@@ -456,7 +462,7 @@
         .timeline {
             .scheduled-block {
                 width: 100%;
-                background: rgba(245, 248, 250,1);
+                background: rgba(245, 248, 250, 1);
             }
             .hour-marker {
                 font-family: "Noto Sans";
@@ -470,8 +476,8 @@
                     top: -8px;
                     left: 8px;
                     position: absolute;
-                    background: rgba(245, 248, 250,1);
-                    padding:4px;
+                    background: rgba(245, 248, 250, 1);
+                    padding: 4px;
                     border-radius: 4px;
                 }
             }
@@ -548,7 +554,7 @@
         display: flex;
         flex-direction: column;
     }
-    
+
     right: 0;
     width: 580px;
     height: 100%;
@@ -560,6 +566,12 @@
         0px 1px 14px 0px rgba(0, 0, 0, 0.12);
     background-color: #fff;
     border-radius: 4px;
+    .input-label {
+        color: #323232;
+        opacity: 0.8;
+        font-size: 16px;
+        font-family: "Noto Sans";
+    }
     .close-button {
         width: 100%;
         cursor: pointer;
@@ -585,10 +597,11 @@
         color: #4f4f4f;
         mix-blend-mode: normal;
         margin-bottom: 10px;
-        overflow: hidden;
+        min-height: 21px;
+        overflow-y: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
-        -webkit-line-clamp: 2; /* number of lines to show */
+        -webkit-line-clamp: 1; /* number of lines to show */
         -webkit-box-orient: vertical;
     }
 
@@ -648,11 +661,73 @@
             margin-left: 4px;
         }
     }
-    .notes-field{
+    .notes-field {
         margin-bottom: 24px;
     }
     .send-request {
         margin-top: auto;
         align-self: baseline;
+        width: 161px;
+    }
+
+    .loader {
+        border: 6px solid $light-grey;
+        border-top: 6px solid $light-blue;
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+}
+
+.tag-info-modal {
+    .info-tag,
+    .case-tag {
+        margin: auto 0;
+    }
+    .info-column,
+    .tag-column {
+        border-bottom: 1px solid grey;
+        padding: 16px 0;
+        &:nth-child(2),
+        &:first-of-type {
+            border-top: 1px solid grey;
+        }
+    }
+    .tag-column {
+        border-left: 1px solid grey;
+        display: flex;
+        justify-content: center;
+    }
+    .info-column {
+        border-right: 1px solid grey;
+    }
+
+    .close-button {
+        width: 100%;
+        cursor: pointer;
+        img {
+            float: right;
+        }
+    }
+    .header {
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;
+        // padding: 40px 40px 0;
+        margin-bottom: 16px;
+    }
+    .close{
+        margin-top: 16px;
+        text-align: end;
     }
 }
