--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -288,6 +288,7 @@
         }
 
         .timing-graphs {
+            margin-top: 18px;
             .procedure-distribution {
                 text-align: center;
                 .title {
@@ -327,17 +328,7 @@
                 border-radius: 4px;
                 background-color: rgba(97, 97, 97, 0.9);
             }
-            .MuiDivider-root {
-                margin-bottom: 18px;
-            }
-            .header {
-                font-family: "Noto Sans";
-                font-weight: bold;
-                font-size: 18px;
-                line-height: 21px;
-                color: #4f4f4f;
-                margin: 30px 0 12px;
-            }
+
             .timing {
                 min-width: 480px;
                 max-width: 600px;
@@ -391,6 +382,9 @@
                     path {
                         stroke: #cce5ee;
                     }
+                }
+                .c3-target-y{
+                    display: none;
                 }
                 .marker {
                     font-family: "Noto Sans";
