--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -102,7 +102,7 @@
             }
         }
         .include-toggle {
-            margin:4px;
+            margin: 4px;
             margin-top: 12px;
             color: #323232 !important;
             .include-label {
@@ -545,7 +545,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                
+
                 .case-title,
                 .case-time {
                     font-family: "Noto Sans";
@@ -765,6 +765,9 @@
     }
     .info-column {
         border-right: 1px solid grey;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
 
     .close-button {
@@ -784,5 +787,12 @@
     .close {
         margin-top: 16px;
         text-align: end;
+    }
+}
+
+@media (max-height: 960px) {
+    .tag-info-modal {
+        max-height: 524px;
+        overflow-y: auto;
     }
 }
