--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -796,3 +796,24 @@
         overflow-y: auto;
     }
 }
+.item-enter {
+    opacity: 0.01;
+    transform: translate(0,-40px)
+}
+
+.item-enter-active {
+    opacity: 1;
+    transform: translate(0, 0);
+    transition: all 500ms ease-in;
+}
+
+.item-exit {
+    opacity: 1;
+    transform: translate(0, 0)
+}
+
+.item-exit-active {
+    opacity: 0.01;
+    transform: translate(0,40px);
+    transition: all 500ms ease-in;
+}
