--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -76,7 +76,7 @@
 
             font-size: 18px;
             line-height: 25px;
-
+            margin-top: 24px;
             color: #323232;
         }
     }
