--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -3,7 +3,6 @@
 .app-wrapper section.case-discovery {
     .tags {
         margin: 4px -4px;
-        display: flex;
         width: 100%;
     }
     .case-tag {
@@ -18,6 +17,7 @@
         font-size: 16px;
         line-height: 19px;
         white-space: nowrap;
+        margin-bottom: 4px;
         .display {
             margin: auto 4px;
         }
