https://surgicalsafety.atlassian.net/browse/IPE-156 Update hyperlink

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -740,6 +740,12 @@
 }
 
 .tag-info-modal {
+    .admin-link{
+        text-decoration: none;
+        &:hover{
+            text-decoration: underline;
+        }
+    }
     .info-tag,
     .case-tag {
         margin: auto 0;
