update scaling for CD

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -331,7 +331,6 @@
             }
 
             .timing {
-                min-width: 480px;
                 max-width: 600px;
                 .scheduled-start {
                     margin-bottom: 16px;
@@ -491,8 +490,7 @@
         width: 100%;
         height: 100%;
         overflow-y: auto;
-        min-width: 330px;
-        max-width: 346px;
+        max-width: 20%;
         .header {
             font-family: "Noto Sans";
             font-style: normal;
