--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -58,6 +58,8 @@
         // padding-top: 49px;
         margin-right: 20px;
         opacity: 1;
+        width: 80%;
+        max-width: 1180px;
     }
     .cases {
         overflow-y: auto;
@@ -83,10 +85,11 @@
 
     .filters {
         overflow-y: auto;
-        max-height: calc(100vh - 17px);
+        max-height: calc(100vh - 62px);
         margin-top: 20px;
         padding-right: 30px;
         max-width: 360px;
+        padding-bottom: 30px;
         .link {
             font-size: 16px;
         }
@@ -115,6 +118,17 @@
         }
         .tags {
             display: inherit !important;
+        }
+        .show-only-saved {
+            .label{
+                font-family: "Noto Sans";
+                font-size: 16px;
+                line-height: 19px;
+                opacity: 0.8;
+                color: #323232;
+            }
+            margin-top: 9px;
+            margin-bottom: -15px;
         }
     }
     .tag {
@@ -157,8 +171,14 @@
         margin-right: 26px;
         padding: 24px;
         border-radius: 8px;
+        width: 80%;
+        max-width: 1180px;
         div:not(:last-child) {
             margin-bottom: 18px;
+        }
+        .case-header {
+            display: flex;
+            justify-content: space-between;
         }
         .title {
             font-family: "Noto Sans";
@@ -168,11 +188,9 @@
             opacity: 0.8;
             cursor: pointer;
             width: fit-content;
-            max-width: 75%;
+            max-width: 85%;
             font-weight: bold;
-            // &:hover {
-            //     text-decoration: underline;
-            // }
+            margin-bottom: 0 !important;
         }
         .subtitle {
             font-family: "Noto Sans";
@@ -252,6 +270,10 @@
             display: flex;
             justify-content: space-between;
             margin-top: 30px;
+        }
+        .back-header{
+            display: flex;
+            justify-content: space-between;
             .button {
                 margin: auto 0;
             }
@@ -738,9 +760,9 @@
 }
 
 .tag-info-modal {
-    .admin-link{
+    .admin-link {
         text-decoration: none;
-        &:hover{
+        &:hover {
             text-decoration: underline;
         }
     }
@@ -797,7 +819,7 @@
 }
 .item-enter {
     opacity: 0.01;
-    transform: translate(0,-40px)
+    transform: translate(0, -40px);
 }
 
 .item-enter-active {
@@ -808,11 +830,11 @@
 
 .item-exit {
     opacity: 1;
-    transform: translate(0, 0)
+    transform: translate(0, 0);
 }
 
 .item-exit-active {
     opacity: 0.01;
-    transform: translate(0,40px);
+    transform: translate(0, 40px);
     transition: all 500ms ease-in;
 }
