--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -165,6 +165,9 @@
         &:hover {
             box-shadow: 1px 1px 6px grey;
             -webkit-transition: box-shadow 0.1s ease-in;
+            .save-toggle.not-saved {
+                display: initial !important;
+            }
         }
         cursor: pointer;
         margin: 8px 8px;
@@ -179,6 +182,9 @@
         .case-header {
             display: flex;
             justify-content: space-between;
+            .save-toggle.not-saved{
+                display: none;
+            }
         }
         .title {
             font-family: "Noto Sans";
