--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -165,8 +165,9 @@
         &:hover {
             box-shadow: 1px 1px 6px grey;
             -webkit-transition: box-shadow 0.1s ease-in;
-            .save-toggle.not-saved {
-                display: initial !important;
+            .case-header .save-toggle.not-saved {
+                opacity: 1 ;
+                height: auto;
             }
         }
         cursor: pointer;
@@ -183,7 +184,9 @@
             display: flex;
             justify-content: space-between;
             .save-toggle.not-saved{
-                display: none;
+                opacity: 0;
+                height: 0;
+                transition: opacity .1s ease-out;
             }
         }
         .title {
