Recommended cases first draft

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -63,7 +63,7 @@
     }
     .cases {
         overflow-y: auto;
-        max-height: calc(100vh - 40px);
+        max-height: calc(100vh - 250px);
         width: 100%;
         padding-top: 96px;
         padding-bottom: 90px;
@@ -120,7 +120,7 @@
             display: inherit !important;
         }
         .show-only-saved {
-            .label{
+            .label {
                 font-family: "Noto Sans";
                 font-size: 16px;
                 line-height: 19px;
@@ -162,12 +162,50 @@
     }
 
     .case {
+        &.short {
+            margin: 8px 8px;
+            border: 1px solid rgba(0, 0, 0, 0.12);
+            padding:16px;
+            .short-icon{
+                margin-top: -6px !important;
+                margin-bottom: -16px !important;
+                margin-right: -12px;
+                svg{
+                    font-size: 24px !important;
+                }
+            }
+            .title {
+                font-size: 16px;
+                line-height: 22px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1; /* number of lines to show */
+                -webkit-box-orient: vertical;
+            }
+            .description,
+            .subtitle{
+                font-size: 14px;
+                line-height: 19px;
+            }
+            
+            .additional-procedure,
+            .case-tag .display {
+                display: none;
+            }
+            div:not(:last-child) {
+                margin-bottom: 9px;
+            }
+        }
         &:hover {
             box-shadow: 1px 1px 6px grey;
             -webkit-transition: box-shadow 0.1s ease-in;
             .case-header .save-toggle.not-saved {
-                opacity: 1 ;
+                opacity: 0.8;
                 height: auto;
+                &:hover {
+                    opacity: 1;
+                }
             }
         }
         cursor: pointer;
@@ -183,10 +221,10 @@
         .case-header {
             display: flex;
             justify-content: space-between;
-            .save-toggle.not-saved{
+            .save-toggle.not-saved {
                 opacity: 0;
                 height: 0;
-                transition: opacity .1s ease-out;
+                transition: opacity 0.1s ease-out;
             }
         }
         .title {
@@ -280,7 +318,7 @@
             justify-content: space-between;
             margin-top: 30px;
         }
-        .back-header{
+        .back-header {
             display: flex;
             justify-content: space-between;
             .button {
@@ -846,4 +884,42 @@
     opacity: 0.01;
     transform: translate(0, 40px);
     transition: all 500ms ease-in;
+}
+
+.recommended-cases {
+    max-width: 80%;
+    > div {
+        display: flex;
+    }
+    
+    .rec-header {
+        display: flex;
+        justify-content: space-between;
+        max-width: 90%;
+        margin: auto;
+        margin-bottom: 8px;
+        font-size: 18px;
+        line-height: 23px;
+    }
+    .left-arrow{
+        width: 0;
+        height: 0;
+        border-top: 8px solid transparent;
+        border-bottom: 8px solid transparent;
+        border-right: 8px solid rgba(51,51,51,.6);
+        margin-right: 10px !important;
+        margin-top: 3px !important;
+        cursor: pointer;
+    }
+    
+    .right-arrow{
+        width: 0;
+        height: 0;
+        border-top: 8px solid transparent;
+        border-bottom: 8px solid transparent;
+        border-left: 8px solid rgba(51,51,51,.6);
+        
+        margin-top: 3px !important;
+        cursor: pointer;
+    }
 }
